syntax = "proto3";
option csharp_namespace = "GrpcSharedProtoFile";
package greet;
import "google/protobuf/empty.proto";

service UserService { 
	// Create a new user 
	rpc CreateUser (UserRequest) 
	returns (UserResponse); 
	
	// Read a user by ID 
	rpc ReadUser (UserIdRequest) 
	returns (UserResponse); 
	
	// Update a user 
	rpc UpdateUser (UserRequest) 
	returns (UserResponse); 
	
	// Delete a user by ID 
	rpc DeleteUser (UserIdRequest) 
	returns (UserResponse); 
	
	// List all users 
	rpc ListUsers (google.protobuf.Empty) 
	returns (UsersListResponse); 
}


// The request message containing the user details. 
message UserRequest { 
	string id = 1; 
	string firstName = 2; 
	string lastName = 3; 
	string nationalCode = 4; 
	string birthDate = 5; 
}
// The response message containing the status and user details. 
message UserResponse { 
	string message = 1; 
	UserRequest user = 2; 
}

// The request message for user ID. 
message UserIdRequest { 
	string id = 1; 
} 

// The response message containing a list of users. 
message UsersListResponse { 
	repeated UserRequest users = 1; 
} 
